--- a/pages/license.html
+++ b/pages/license.html
@@ -5,31 +5,12 @@
 <body>
 <!-- Body Div. -->
 <div id="body-div" style="margin: 10%;">
-  <div class="title" style="padding-top: 40px;">License</div>
-  <div class="text" style="text-align: left; margin-top: 100px;">
-    Copyright (c) 2021 The X Programming Language
-    <br><br>
-    Permission is hereby granted, free of charge, to any person obtaining a copy
-    of this software and associated documentation files (the "Software"), to deal
-    in the Software without restriction, including without limitation the rights
-    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-    copies of the Software, and to permit persons to whom the Software is
-    furnished to do so, subject to the following conditions:
-    <br><br>
-    The above copyright notice and this permission notice shall be included in all
-    copies or substantial portions of the Software.
-
-    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-    SOFTWARE.
-  </div>
+  <div id="content-title" class="title" style="padding-top: 40px;"></div>
+  <div id="license-text" class="text" style="text-align: left; margin-top: 100px;"></div>
 </div>
 </body>
 <!-- Scripts. -->
+<script src="../javascript/pages/license.js"></script>
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/copyright.js" type="text/javascript"></script>
 </html>
