Remove random text.

--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -11,7 +11,7 @@
   <div id="getfork-title" class="sub-title" style="text-align: left; margin-top: 40px;"></div>
   <div id="getfork-content" class="text" style="text-align: left; margin-top: 10px;"></div>
   <div id="send-pr-title" class="sub-title" style="text-align: left; margin-top: 40px;"></div>
-  <div id="send-pr-content" class="text" style="text-align: left; margin-top: 10px;">ğldgndğglsgolpm</div>
+  <div id="send-pr-content" class="text" style="text-align: left; margin-top: 10px;"></div>
 </div>
 </body>
 <!-- Scripts. -->
