--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./styles/index.css" rel="stylesheet" type="text/css">
+  <link href="./styles/pages/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="body-div">
@@ -9,8 +9,6 @@
   <div id="startup-panel-content" class="startup-panel-content"></div>
   <div id="code-example" class="code" style="margin-top: 80px; width: 30%;"></div>
   </div>
-  <div class="startup-panel-seperator"></div>
-  <div style="padding-top: 25%;"></div>
   <div class="line-section">
   <div class="content-body">
     <div id="entry-description" style="margin: auto; display: flex;"></div>
@@ -31,7 +29,7 @@
 </div>
 </body>
 <!-- Scripts. -->
-<script src="./javascript/index.js" type="text/javascript"></script>
+<script src="./javascript/pages/index.js" type="text/javascript"></script>
 <script src="./javascript/init.js" type="text/javascript"></script>
 <script src="./javascript/copyright.js" type="text/javascript"></script>
 </html>
