--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <link href="./styles/pages/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<!-- Navigation bar. -->
+<div id="navigation" class="navigation"></div>
 <div class="body-div">
   <div id="startup-panel">
   <div id="startup-panel-content" class="startup-panel-content"></div>
