--- a/pages/code_of_conduct.html
+++ b/pages/code_of_conduct.html
@@ -4,6 +4,8 @@
   <title>X - Code of Conduct</title>
 </head>
 <body>
+<!-- Navigation bar. -->
+<div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div" style="margin: 10%;">
   <div id="content-title" class="title" style="padding-top: 40px;"></div>
