--- a/pages/community.html
+++ b/pages/community.html
@@ -3,6 +3,8 @@
 <head>
 </head>
 <body>
+<!-- Navigation bar. -->
+<div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div">
   <div class="section" style="margin-top: 100px; margin-left: 15%; margin-right: 15%;">
