--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
 <head>
 </head>
 <body>
+<!-- Navigation bar. -->
+<div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div">
   <center>
