--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -3,6 +3,8 @@
 <head>
 </head>
 <body>
+<!-- Navigation bar. -->
+<div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div" style="margin: 10%;">
   <div id="content-title" class="title" style="padding-top: 40px;"></div>
