Update main page.

--- a/index.html
+++ b/index.html
@@ -7,26 +7,40 @@
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <div class="body-div">
+  <img id="startup-background-image" src="./resources/view.jpg">
   <div id="startup-panel">
   <div id="startup-panel-content" class="startup-panel-content"></div>
-  <div id="code-example" class="code" style="margin-top: 80px; width: 30%;"></div>
   </div>
-  <div class="line-section">
+  <img id="navigate-logo" src="https://raw.githubusercontent.com/the-xlang/resources/main/x.svg?sanitize=true">
+  <div
+    id="navigate-download"
+    class="navigate-link"
+    style="margin-left: calc(50% - 350px); text-align: left;">
+    <a href="https://github.com/the-xlang/x/releases">RELEASES</a>
+  </div>
+  <div
+    id="navigate-documentations"
+    class="navigate-link"
+    style="margin-left: 50%; text-align: right;">
+    <a href="./pages/docs.html">LEARNING</a>
+  </div>
+  <div class="navigate-shadow"></div>
+  <div class="navigate-large-shadow"></div>
+  <div class="line-section" style="padding-top: 200px;">
   <div class="content-body">
     <div id="entry-description" style="margin: auto; display: flex;"></div>
   </div>
   </div>
-  <div style="padding-top: 300px;"></div>
-  <div class="section" style="margin-left: 5%; margin-right: 5%;">
-  <div style="padding: 50px;">
-  <div id="pretty-transpile-title" class="title" style="text-align: unset; margin-bottom: 20px;"></div>
-  <div id="pretty-transpile-content"></div>
-  </div>
-  <div style="color: black; background-color: white; margin-left: auto; width: 40%;">
-    <img
-      src="./resources/pretty_transpile.png"
-      style="width: 100%; height: 100%;">
-  </div>
+  <div class="section" style="margin-left: 5%; margin-right: 5%; margin-top: 450px;">
+    <div style="padding: 50px;">
+    <div id="pretty-transpile-title" class="title" style="text-align: unset;"></div>
+    <div id="pretty-transpile-content" style="margin-bottom: 20px;"></div>
+    </div>
+    <div style="color: black; background-color: white; margin-left: auto; width: 40%;">
+      <img
+        src="./resources/pretty_transpile.png"
+        style="width: 100%; height: 100%;">
+    </div>
   </div>
 </div>
 </body>
