Fix home page navigate links.

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <div id="startup-panel-content" class="startup-panel-content"></div>
   </div>
   <img id="navigate-logo" src="https://raw.githubusercontent.com/the-xlang/resources/main/x.svg?sanitize=true">
+  <a href="https://github.com/the-xlang/x/releases">
   <div
     id="navigate-download"
     class="navigate-link"
-    style="margin-left: calc(50% - 350px); text-align: left;">
-    <a href="https://github.com/the-xlang/x/releases">RELEASES</a>
-  </div>
+    style="margin-left: calc(50% - 350px); text-align: left;">RELEASES</div>
+  </a>
+  <a href="./pages/docs.html">
   <div
     id="navigate-documentations"
     class="navigate-link"
-    style="margin-left: 50%; text-align: right;">
-    <a href="./pages/docs.html">LEARNING</a>
-  </div>
+    style="margin-left: 50%; text-align: right;">LEARNING</div>
+  </a>
   <div class="navigate-shadow"></div>
   <div class="navigate-large-shadow"></div>
   <div class="line-section" style="padding-top: 200px;">
