Add type aliases to docs.

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -59,6 +59,9 @@
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
       <a id="common-concepts-functions" class="sub-topic"><strong>5.1.</strong> Functions</a>
     <br>
+    <a id="items" class="topic"><strong>6.</strong> Items</a> <br>
+      <a id="items-type-aliases" class="sub-topic"><strong>6.1.</strong> Type Aliases</a>
+    <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
