--- a/index.html
+++ b/index.html
@@ -48,4 +48,5 @@
 <script src="./javascript/pages/index.js" type="text/javascript"></script>
 <script src="./javascript/init.js" type="text/javascript"></script>
 <script src="./javascript/copyright.js" type="text/javascript"></script>
+<script src="./javascript/searchbox.js" type="text/javascript"></script>
 </html>
