--- a/page_template.html
+++ b/page_template.html
@@ -3,6 +3,8 @@
 <head>
 </head>
 <body>
+<!-- Navigation bar. -->
+<div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div">
 </div>
@@ -10,4 +12,5 @@
 <!-- Scripts. -->
 <script src="./javascript/init.js" type="text/javascript"></script>
 <script src="./javascript/copyright.js" type="text/javascript"></script>
+<script src="./javascript/searchbox.js" type="text/javascript"></script>
 </html>
