--- a/pages/code_of_conduct.html
+++ b/pages/code_of_conduct.html
@@ -23,4 +23,5 @@
 <script src="../javascript/pages/code_of_conduct.js"></script>
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/copyright.js" type="text/javascript"></script>
+<script src="../javascript/searchbox.js" type="text/javascript"></script>
 </html>
