--- a/pages/community.html
+++ b/pages/community.html
@@ -33,4 +33,5 @@
 <script src="../javascript/pages/community.js"></script>
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/copyright.js" type="text/javascript"></script>
+<script src="../javascript/searchbox.js" type="text/javascript"></script>
 </html>
