--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -20,4 +20,5 @@
 <script src="../javascript/pages/contributing.js"></script>
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/copyright.js" type="text/javascript"></script>
+<script src="../javascript/searchbox.js" type="text/javascript"></script>
 </html>
