--- a/pages/license.html
+++ b/pages/license.html
@@ -15,4 +15,5 @@
 <script src="../javascript/pages/license.js"></script>
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/copyright.js" type="text/javascript"></script>
+<script src="../javascript/searchbox.js" type="text/javascript"></script>
 </html>
