--- a/search.html
+++ b/search.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>X - Search</title>
 </head>
 <body>
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div">
-  <center>
-  <div id="code" class="title" style="margin-top: 100px; font-size: 70px;"></div>
-  <div id="title" class="title"></div>
-  <div id="message" class="text" style="margin-top: 20px; margin-bottom: 40px;"></div>
-  <button id="home-button"></button>
-  </center>
 </div>
 </body>
 <!-- Scripts. -->
-<script src="./javascript/pages/404.js"></script>
+<script src="./javascript/pages/search.js" type="text/javascript"></script>
 <script src="./javascript/init.js" type="text/javascript"></script>
 <script src="./javascript/copyright.js" type="text/javascript"></script>
 <script src="./javascript/searchbox.js" type="text/javascript"></script>
