Add array documentations and minor improvements for user interface.

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <link href="../styles/pages/docs.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -58,7 +59,8 @@
     <br>
     <a id="common-concepts" class="topic"><strong>5.</strong> Common Concepts</a> <br>
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
-      <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a>
+      <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a> <br>
+      <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a>
     <br>
     <a id="items" class="topic"><strong>6.</strong> Items</a> <br>
       <a id="items-type-aliases" class="sub-topic"><strong>6.1.</strong> Type Aliases</a>
