Improve home page design and minor adds.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <link href="./styles/pages/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -16,7 +17,7 @@
   <div
     id="navigate-download"
     class="navigate-link"
-    style="margin-left: calc(50% - 350px); text-align: left;">RELEASES</div>
+    style="margin-left: calc(50% - 350px); text-align: left;">DOWNLOAD</div>
   </a>
   <a href="./pages/docs.html">
   <div
@@ -26,7 +27,7 @@
   </a>
   <div class="navigate-shadow"></div>
   <div class="navigate-large-shadow"></div>
-  <div class="line-section" style="padding-top: 200px;">
+  <div class="line-section last" style="padding-top: 200px;">
   <div class="content-body">
     <div id="entry-description" style="margin: auto; display: flex;"></div>
   </div>
@@ -36,11 +37,20 @@
     <div id="pretty-transpile-title" class="title" style="text-align: unset;"></div>
     <div id="pretty-transpile-content" style="margin-bottom: 20px;"></div>
     </div>
-    <div style="color: black; background-color: white; margin-left: auto; width: 40%;">
+    <div style="margin-left: auto; width: 40%;">
       <img
         src="./resources/pretty_transpile.png"
         style="width: 100%; height: 100%;">
     </div>
+  </div>
+  <div style="margin-top: 200px;"></div>
+  <div class="title">Getting Started</div>
+  <div style="padding: 50px;">
+  <center>
+  <a href="https://github.com/the-xlang/x/releases"><button>Download</button></a>
+  <a href="./pages/docs.html"><button style="margin-left: 20px;">Documentations</button></a>
+  <a href="./pages/community.html"><button style="margin-left: 20px;">Community</button></a>
+  </center>
   </div>
 </div>
 </body>
