Improve get started section of home page.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,42 @@
     </div>
   </div>
   <div style="margin-top: 200px;"></div>
-  <div class="title">Getting Started</div>
-  <div style="padding: 50px;">
+  <div class="title">Get Started</div>
+  <div class="link-card-section" style="padding: 50px;">
   <center>
-  <a href="https://github.com/the-xlang/x/releases"><button>Download</button></a>
-  <a href="./pages/docs.html"><button style="margin-left: 20px;">Documentations</button></a>
-  <a href="./pages/community.html"><button style="margin-left: 20px;">Community</button></a>
+  <a href="https://github.com/the-xlang/x/releases" class="link-card">
+  <img
+    class="getstarted-linkcard-image"
+    src="./resources/download.png">
+  <div class="link-card-body">
+    <div class="sub-sub-title">Download</div>
+    Install X Compiler
+    <svg width="14" height="23" viewBox="0 0 14 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M2 2L11 11.5L2 21" stroke="white" stroke-width="4"></path>
+    </svg>
+  </div></a>
+  <a href="./pages/docs.html" class="link-card">
+  <img
+    class="getstarted-linkcard-image"
+    src="./resources/cap.png">
+  <div class="link-card-body">
+    <div class="sub-sub-title">Documentations</div>
+    Learn the language
+    <svg width="14" height="23" viewBox="0 0 14 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M2 2L11 11.5L2 21" stroke="white" stroke-width="4"></path>
+    </svg>
+  </div></a>
+  <a href="./pages/community.html" class="link-card">
+  <img
+    class="getstarted-linkcard-image"
+    src="./resources/community.png">
+  <div class="link-card-body">
+    <div class="sub-sub-title">Community</div>
+    Join community
+    <svg width="14" height="23" viewBox="0 0 14 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M2 2L11 11.5L2 21" stroke="white" stroke-width="4"></path>
+    </svg>
+  </div></a>
   </center>
   </div>
 </div>
