--- a/pages/community.html
+++ b/pages/community.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>X - Community</title>
+  <meta charset="UTF-8">
 </head>
 <body>
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div">
-  <div class="section" style="margin-top: 100px; margin-left: 15%; margin-right: 15%;">
-  <div style="padding: 50px; width: 70%;">
-    <div id="online-title" class="title" style="text-align: unset; margin-bottom: 20px;"></div>
-    <div id="online-description"></div>
-  </div>
-  <div id="online-content" style="background-color: rgb(50, 50, 50); margin-left: auto; width: 100%; padding: 50px;">
-    <div style="width: 100%; height: 100%;">
-    <table>
-      <tr>
-        <div id="github-title" class="sub-title" style="text-align: left; margin-bottom: 10px;"></div>
-        <div id="github-description" class="text" style="text-align: left; margin-bottom: 20px;"></div>
-      </tr>
-      <tr>
-        <div id="stackoverflow-title" class="sub-title" style="text-align: left; margin-bottom: 10px;"></div>
-        <div id="stackoverflow-description" class="text" style="text-align: left; margin-bottom: 20px;"></div>
-      </tr>
-    </table>
-    </div>
-  </div>
+  <div class="title" style="margin-top: 100px;">Community</div>
+  <div class="link-card-section" style="margin-top: 100px; margin-left: 10%; margin-right: 10%;">
+  <center>
+    <a href="https://github.com/the-xlang/x/issues/new/choose" class="link-card">
+    <img
+      class="getstarted-linkcard-image"
+      src="../resources/github.png"
+      width="150"
+      height="150"
+      style="margin-top: 20px;">
+    <br>
+    <div class="link-card-body" style="display: inline-flex; margin-top: 100px;">
+      <div class="sub-sub-title">GitHub</div>
+    </div></a>
+    <a href="https://stackoverflow.com/questions/tagged/x" class="link-card">
+    <img
+      class="getstarted-linkcard-image"
+      src="../resources/stackoverflow.png"
+      width="150"
+      height="150"
+      style="margin-top: 20px;">
+    <br>
+    <div class="link-card-body" style="display: inline-flex; margin-top: 100px;">
+      <div class="sub-sub-title">StackOverflow</div>
+    </div></a>
+  </center>
   </div>
 </div>
 </body>
 <!-- Scripts. -->
-<script src="../javascript/pages/community.js"></script>
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/copyright.js" type="text/javascript"></script>
 <script src="../javascript/searchbox.js" type="text/javascript"></script>
