--- a/pages/docs.html
+++ b/pages/docs.html
@@ -55,7 +55,7 @@
       <a id="basics-data-types" class="sub-topic"><strong>4.3.</strong> Data Types</a> <br>
       <a id="basics-operators" class="sub-topic"><strong>4.4.</strong> Operators</a> <br>
       <a id="basics-attributes" class="sub-topic"><strong>4.5.</strong> Attributes</a> <br>
-      <a id="basics-expressions-as-statement" class="sub-topic"><strong>4.6.</strong> Expressions as Statement</a>
+      <a id="basics-statements" class="sub-topic"><strong>4.6.</strong> Statements</a>
     <br>
     <a id="common-concepts" class="topic"><strong>5.</strong> Common Concepts</a> <br>
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
