--- a/404.html
+++ b/404.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <link href="./styles/pages/404.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div">
+  <div class="neuralcanvas"></div>
   <center>
   <div id="code" class="title" style="margin-top: 100px; font-size: 70px;"></div>
   <div id="title" class="title"></div>
@@ -20,4 +23,5 @@
 <script src="./javascript/init.js" type="text/javascript"></script>
 <script src="./javascript/copyright.js" type="text/javascript"></script>
 <script src="./javascript/searchbox.js" type="text/javascript"></script>
+<script src="./javascript/neuralcanvas.js"></script>
 </html>
