--- a/pages/docs.html
+++ b/pages/docs.html
@@ -62,8 +62,10 @@
       <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a> <br>
       <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a>
     <br>
-    <a id="items" class="topic"><strong>6.</strong> Items</a> <br>
-      <a id="items-type-aliases" class="sub-topic"><strong>6.1.</strong> Type Aliases</a>
+    <a id="memory-management" class="topic"><strong>6.</strong> Memory Management</a>
+    <br>
+    <a id="items" class="topic"><strong>7.</strong> Items</a> <br>
+      <a id="items-type-aliases" class="sub-topic"><strong>7.1.</strong> Type Aliases</a>
     <br>
     <a id="end" class="topic">End</a>
   </div>
