--- a/index.html
+++ b/index.html
@@ -14,19 +14,15 @@
   </div>
   <img id="navigate-logo" src="https://raw.githubusercontent.com/the-xlang/resources/main/x.svg?sanitize=true">
   <a href="https://github.com/the-xlang/x/releases">
-  <div
-    id="navigate-download"
-    class="navigate-link left">DOWNLOAD</div>
+  <div id="navigate-download" class="navigate-link left">DOWNLOAD</div>
   </a>
   <a href="./pages/docs.html">
-  <div
-    id="navigate-documentations"
-    class="navigate-link right">LEARNING</div>
+  <div id="navigate-documentations" class="navigate-link right">LEARNING</div>
   </a>
   <div class="navigate-shadow"></div>
   <div class="navigate-large-shadow"></div>
   <div class="line-section last" style="padding-top: 200px;">
-  <div class="content-body">
+  <div class="content-body" style="border-radius: 10000px;">
     <div id="entry-description" style="margin: auto; display: flex;"></div>
   </div>
   </div>
@@ -36,9 +32,7 @@
     <div id="pretty-transpile-content" style="margin-bottom: 20px;"></div>
     </div>
     <div style="margin-left: auto; width: 40%;">
-      <img
-        src="./resources/pretty_transpile.png"
-        style="width: 100%; height: 100%;">
+      <img src="./resources/pretty_transpile.png" style="width: 100%; height: 100%;">
     </div>
   </div>
   <div style="margin-top: 200px;"></div>
@@ -57,9 +51,7 @@
     </svg>
   </div></a>
   <a href="./pages/docs.html" class="link-card">
-  <img
-    class="getstarted-linkcard-image"
-    src="./resources/cap.png">
+  <img class="getstarted-linkcard-image" src="./resources/cap.png">
   <div class="link-card-body">
     <div class="sub-sub-title">Documentations</div>
     Learn the language
@@ -68,9 +60,7 @@
     </svg>
   </div></a>
   <a href="./pages/community.html" class="link-card">
-  <img
-    class="getstarted-linkcard-image"
-    src="./resources/community.png">
+  <img class="getstarted-linkcard-image" src="./resources/community.png">
   <div class="link-card-body">
     <div class="sub-sub-title">Community</div>
     Join community
