--- a/pages/docs.html
+++ b/pages/docs.html
@@ -67,6 +67,9 @@
     <a id="items" class="topic"><strong>7.</strong> Items</a> <br>
       <a id="items-type-aliases" class="sub-topic"><strong>7.1.</strong> Type Aliases</a>
     <br>
+    <a id="standard-library" class="topic"><strong>8.</strong> Standard Library</a> <br>
+    <a id="standard-library-builtin" class="sub-topic"><strong>8.1</strong> Built-In</a>
+    <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
