--- a/pages/docs.html
+++ b/pages/docs.html
@@ -60,7 +60,8 @@
     <a id="common-concepts" class="topic"><strong>5.</strong> Common Concepts</a> <br>
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
       <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a> <br>
-      <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a>
+      <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a> <br>
+      <a id="common-concepts-control-flow" class="sub-topic"><strong>5.4.</strong> Control Flow</a>
     <br>
     <a id="memory-management" class="topic"><strong>6.</strong> Memory Management</a>
     <br>
