--- a/404.html
+++ b/404.html
@@ -1,3 +1,9 @@
+<!--
+Copyright 2021 The X Programming Language.
+Use of this source code is governed by a BSD 3-Clause
+license that can be found in the LICENSE file.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
