--- a/pages/docs.html
+++ b/pages/docs.html
@@ -14,7 +14,7 @@
       display: flex;
       height: 50px;
       margin-bottom: 20px;
-      background-color: rgb(17, 17, 17);
+      background-color: rgb(15, 15, 15);
       position: fixed;
       width: 280px;
       min-width: 280px;
@@ -65,8 +65,9 @@
     <br>
     <a id="memory-management" class="topic"><strong>6.</strong> Memory Management</a>
     <br>
-    <a id="items" class="topic"><strong>7.</strong> Items</a> <br>
-      <a id="items-type-aliases" class="sub-topic"><strong>7.1.</strong> Type Aliases</a>
+    <a id="types" class="topic"><strong>7.</strong> Types</a> <br>
+      <a id="types-aliasing" class="sub-topic"><strong>7.1.</strong> Aliasing</a> <br>
+      <a id="types-casting" class="sub-topic"><strong>7.2.</strong> Casting</a>
     <br>
     <a id="standard-library" class="topic"><strong>8.</strong> Standard Library</a> <br>
     <a id="standard-library-builtin" class="sub-topic"><strong>8.1</strong> Built-In</a>
