--- a/pages/docs.html
+++ b/pages/docs.html
@@ -69,8 +69,11 @@
       <a id="types-aliasing" class="sub-topic"><strong>7.1.</strong> Aliasing</a> <br>
       <a id="types-casting" class="sub-topic"><strong>7.2.</strong> Casting</a>
     <br>
-    <a id="standard-library" class="topic"><strong>8.</strong> Standard Library</a> <br>
-    <a id="standard-library-builtin" class="sub-topic"><strong>8.1</strong> Built-In</a>
+    <a id="cxx" class="topic"><strong>8.</strong> Cxx</a> <br>
+      <a id="cxx-cxxapi" class="sub-topic"><strong>8.1.</strong> CxxAPI</a>
+    <br>
+    <a id="standard-library" class="topic"><strong>9.</strong> Standard Library</a> <br>
+    <a id="standard-library-builtin" class="sub-topic"><strong>9.1</strong> Built-In</a>
     <br>
     <a id="end" class="topic">End</a>
   </div>
