--- a/pages/docs.html
+++ b/pages/docs.html
@@ -63,7 +63,9 @@
       <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a> <br>
       <a id="common-concepts-control-flow" class="sub-topic"><strong>5.4.</strong> Control Flow</a>
     <br>
-    <a id="memory-management" class="topic"><strong>6.</strong> Memory Management</a>
+    <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
+      <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
+      <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a>
     <br>
     <a id="types" class="topic"><strong>7.</strong> Types</a> <br>
       <a id="types-aliasing" class="sub-topic"><strong>7.1.</strong> Aliasing</a> <br>
