--- a/pages/docs.html
+++ b/pages/docs.html
@@ -38,45 +38,38 @@
     <a id="introduction" class="topic"><strong></strong> Introduction</a> <br>
     <a id="getting-started" class="topic"><strong>1.</strong> Getting Started</a> <br>
       <a id="getting-started-downloads" class="sub-topic"><strong>1.1.</strong> Downloads</a> <br>
-      <a id="getting-started-install-from-source" class="sub-topic"><strong>1.2.</strong> Install from Source</a>
-    <br>
+      <a id="getting-started-install-from-source" class="sub-topic"><strong>1.2.</strong> Install from Source</a> <br>
     <a id="compiler" class="topic"><strong>2.</strong> Compiler</a> <br>
       <a id="compiler-basic-commands" class="sub-topic"><strong>2.1.</strong> Basic Commands</a> <br>
       <a id="compiler-config-files" class="sub-topic"><strong>2.2.</strong> Config Files</a> <br>
-      <a id="compiler-compiling" class="sub-topic"><strong>2.3.</strong> Compiling</a>
-    <br>
+      <a id="compiler-compiling" class="sub-topic"><strong>2.3.</strong> Compiling</a> <br>
     <a id="project" class="topic"><strong>3.</strong> Project</a> <br>
       <a id="project-directory-order" class="sub-topic"><strong>3.1.</strong> Direcotory Order</a> <br>
-      <a id="project-naming" class="sub-topic"><strong>3.2.</strong> Naming</a>
-    <br>
+      <a id="project-naming" class="sub-topic"><strong>3.2.</strong> Naming</a> <br>
     <a id="basics" class="topic"><strong>4.</strong> Basics</a> <br>
       <a id="basics-comments" class="sub-topic"><strong>4.1.</strong> Comments</a> <br>
       <a id="basics-entry-point" class="sub-topic"><strong>4.2.</strong> Entry Point</a> <br>
       <a id="basics-data-types" class="sub-topic"><strong>4.3.</strong> Data Types</a> <br>
       <a id="basics-operators" class="sub-topic"><strong>4.4.</strong> Operators</a> <br>
       <a id="basics-attributes" class="sub-topic"><strong>4.5.</strong> Attributes</a> <br>
-      <a id="basics-statements" class="sub-topic"><strong>4.6.</strong> Statements</a>
-    <br>
+      <a id="basics-statements" class="sub-topic"><strong>4.6.</strong> Statements</a> <br>
     <a id="common-concepts" class="topic"><strong>5.</strong> Common Concepts</a> <br>
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
       <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a> <br>
       <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a> <br>
-      <a id="common-concepts-control-flow" class="sub-topic"><strong>5.4.</strong> Control Flow</a>
-    <br>
+      <a id="common-concepts-control-flow" class="sub-topic"><strong>5.4.</strong> Control Flow</a> <br>
     <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
       <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
-      <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a>
-    <br>
+      <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a> <br>
     <a id="types" class="topic"><strong>7.</strong> Types</a> <br>
       <a id="types-aliasing" class="sub-topic"><strong>7.1.</strong> Aliasing</a> <br>
-      <a id="types-casting" class="sub-topic"><strong>7.2.</strong> Casting</a>
-    <br>
+      <a id="types-casting" class="sub-topic"><strong>7.2.</strong> Casting</a> <br>
     <a id="cxx" class="topic"><strong>8.</strong> Cxx</a> <br>
-      <a id="cxx-cxxapi" class="sub-topic"><strong>8.1.</strong> CxxAPI</a>
-    <br>
+      <a id="cxx-cxxapi" class="sub-topic"><strong>8.1.</strong> CxxAPI</a> <br>
     <a id="standard-library" class="topic"><strong>9.</strong> Standard Library</a> <br>
-    <a id="standard-library-builtin" class="sub-topic"><strong>9.1</strong> Built-In</a>
-    <br>
+      <a id="standard-library-builtin" class="sub-topic"><strong>9.1</strong> Built-In</a> <br>
+    <a id="documenting" class="topic"><strong>10.</strong> Documenting</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>10.1</strong> Using Documenter</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
