--- a/pages/docs.html
+++ b/pages/docs.html
@@ -69,7 +69,8 @@
     <a id="standard-library" class="topic"><strong>9.</strong> Standard Library</a> <br>
       <a id="standard-library-builtin" class="sub-topic"><strong>9.1</strong> Built-In</a> <br>
     <a id="documenting" class="topic"><strong>10.</strong> Documenting</a> <br>
-      <a id="documenting-using-documenter" class="sub-topic"><strong>10.1</strong> Using Documenter</a> <br>
+      <a id="documenting-documentation-comments" class="sub-topic"><strong>10.1</strong> Documentation Comments</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>10.2</strong> Using Documenter</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
