--- a/pages/docs.html
+++ b/pages/docs.html
@@ -46,6 +46,7 @@
     <a id="project" class="topic"><strong>3.</strong> Project</a> <br>
       <a id="project-directory-order" class="sub-topic"><strong>3.1.</strong> Direcotory Order</a> <br>
       <a id="project-naming" class="sub-topic"><strong>3.2.</strong> Naming</a> <br>
+      <a id="project-defines" class="sub-topic"><strong>3.3.</strong> Defines</a> <br>
     <a id="basics" class="topic"><strong>4.</strong> Basics</a> <br>
       <a id="basics-comments" class="sub-topic"><strong>4.1.</strong> Comments</a> <br>
       <a id="basics-entry-point" class="sub-topic"><strong>4.2.</strong> Entry Point</a> <br>
