--- a/pages/docs.html
+++ b/pages/docs.html
@@ -74,6 +74,8 @@
       <a id="documenting-documentation-comments" class="sub-topic"><strong>10.1</strong> Documentation Comments</a> <br>
       <a id="documenting-using-documenter" class="sub-topic"><strong>10.2</strong> Using Documenter</a> <br>
     <a id="use-declarations" class="topic"><strong>11.</strong> Use Declarations</a> <br>
+    <a id="preprocessor" class="topic"><strong>12.</strong> Preprocessor</a> <br>
+      <a id="preprocessor-directives" class="sub-topic"><strong>12.1</strong> Directives</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
