--- a/pages/docs.html
+++ b/pages/docs.html
@@ -65,17 +65,19 @@
     <a id="types" class="topic"><strong>7.</strong> Types</a> <br>
       <a id="types-aliasing" class="sub-topic"><strong>7.1.</strong> Aliasing</a> <br>
       <a id="types-casting" class="sub-topic"><strong>7.2.</strong> Casting</a> <br>
+      <a id="types-str" class="sub-topic"><strong>7.3.</strong> str</a> <br>
     <a id="cxx" class="topic"><strong>8.</strong> Cxx</a> <br>
       <a id="cxx-cxx-embedding" class="sub-topic"><strong>8.1.</strong> Cxx Embedding</a> <br>
       <a id="cxx-cxxapi" class="sub-topic"><strong>8.2.</strong> CxxAPI</a> <br>
-    <a id="standard-library" class="topic"><strong>9.</strong> Standard Library</a> <br>
-      <a id="standard-library-builtin" class="sub-topic"><strong>9.1</strong> Built-In</a> <br>
-    <a id="documenting" class="topic"><strong>10.</strong> Documenting</a> <br>
-      <a id="documenting-documentation-comments" class="sub-topic"><strong>10.1</strong> Documentation Comments</a> <br>
-      <a id="documenting-using-documenter" class="sub-topic"><strong>10.2</strong> Using Documenter</a> <br>
-    <a id="use-declarations" class="topic"><strong>11.</strong> Use Declarations</a> <br>
-    <a id="preprocessor" class="topic"><strong>12.</strong> Preprocessor</a> <br>
-      <a id="preprocessor-directives" class="sub-topic"><strong>12.1</strong> Directives</a> <br>
+    <a id="documenting" class="topic"><strong>9.</strong> Documenting</a> <br>
+      <a id="documenting-documentation-comments" class="sub-topic"><strong>9.1</strong> Documentation Comments</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>9.2</strong> Using Documenter</a> <br>
+    <a id="use-declarations" class="topic"><strong>10.</strong> Use Declarations</a> <br>
+    <a id="preprocessor" class="topic"><strong>11.</strong> Preprocessor</a> <br>
+      <a id="preprocessor-directives" class="sub-topic"><strong>11.1</strong> Directives</a> <br>
+    <a id="standard-library" class="topic"><strong>12.</strong> Standard Library</a> <br>
+      <a id="standard-library-builtin" class="sub-topic"><strong>12.1</strong> Built-In</a> <br>
+      <a id="standard-library-io" class="sub-topic"><strong>12.2</strong> io</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
