--- a/pages/docs.html
+++ b/pages/docs.html
@@ -66,6 +66,7 @@
       <a id="types-aliasing" class="sub-topic"><strong>7.1.</strong> Aliasing</a> <br>
       <a id="types-casting" class="sub-topic"><strong>7.2.</strong> Casting</a> <br>
       <a id="types-str" class="sub-topic"><strong>7.3.</strong> str</a> <br>
+      <a id="types-arrays" class="sub-topic"><strong>7.4.</strong> Arrays</a> <br>
     <a id="cxx" class="topic"><strong>8.</strong> Cxx</a> <br>
       <a id="cxx-cxx-embedding" class="sub-topic"><strong>8.1.</strong> Cxx Embedding</a> <br>
       <a id="cxx-cxxapi" class="sub-topic"><strong>8.2.</strong> CxxAPI</a> <br>
