Update license page.

--- a/pages/license.html
+++ b/pages/license.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>X - License</title>
 </head>
 <body>
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div" style="margin: 10%;">
-  <div id="content-title" class="title" style="padding-top: 40px;"></div>
-  <div id="license-text" class="text" style="text-align: left; margin-top: 100px;"></div>
+  <div id="content-title" class="title" style="padding-top: 40px;">LICENSE</div>
+  <div id="license-text" class="text"
+  style="text-align: left; margin-left: auto; margin-right: auto; margin-top: 100px; width: 600px;"></div>
 </div>
 </body>
 <!-- Scripts. -->
