--- a/pages/docs.html
+++ b/pages/docs.html
@@ -58,7 +58,8 @@
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
       <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a> <br>
       <a id="common-concepts-arrays" class="sub-topic"><strong>5.3.</strong> Arrays</a> <br>
-      <a id="common-concepts-control-flow" class="sub-topic"><strong>5.4.</strong> Control Flow</a> <br>
+      <a id="common-concepts-maps" class="sub-topic"><strong>5.4.</strong> Maps</a> <br>
+      <a id="common-concepts-control-flow" class="sub-topic"><strong>5.5.</strong> Control Flow</a> <br>
     <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
       <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
       <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a> <br>
