--- a/pages/docs.html
+++ b/pages/docs.html
@@ -70,18 +70,19 @@
       <a id="types-str" class="sub-topic"><strong>7.3.</strong> str</a> <br>
       <a id="types-arrays" class="sub-topic"><strong>7.4.</strong> Arrays</a> <br>
       <a id="types-maps" class="sub-topic"><strong>7.5.</strong> Maps</a> <br>
-    <a id="cxx" class="topic"><strong>8.</strong> Cxx</a> <br>
-      <a id="cxx-cxx-embedding" class="sub-topic"><strong>8.1.</strong> Cxx Embedding</a> <br>
-      <a id="cxx-cxxapi" class="sub-topic"><strong>8.2.</strong> CxxAPI</a> <br>
-    <a id="documenting" class="topic"><strong>9.</strong> Documenting</a> <br>
-      <a id="documenting-documentation-comments" class="sub-topic"><strong>9.1</strong> Documentation Comments</a> <br>
-      <a id="documenting-using-documenter" class="sub-topic"><strong>9.2</strong> Using Documenter</a> <br>
-    <a id="use-declarations" class="topic"><strong>10.</strong> Use Declarations</a> <br>
-    <a id="preprocessor" class="topic"><strong>11.</strong> Preprocessor</a> <br>
-      <a id="preprocessor-directives" class="sub-topic"><strong>11.1</strong> Directives</a> <br>
-    <a id="standard-library" class="topic"><strong>12.</strong> Standard Library</a> <br>
-      <a id="standard-library-builtin" class="sub-topic"><strong>12.1</strong> Built-In</a> <br>
-      <a id="standard-library-io" class="sub-topic"><strong>12.2</strong> io</a> <br>
+    <a id="namespaces" class="topic"><strong>8.</strong> Namespaces</a> <br>
+    <a id="cxx" class="topic"><strong>9.</strong> Cxx</a> <br>
+      <a id="cxx-cxx-embedding" class="sub-topic"><strong>9.1.</strong> Cxx Embedding</a> <br>
+      <a id="cxx-cxxapi" class="sub-topic"><strong>9.2.</strong> CxxAPI</a> <br>
+    <a id="documenting" class="topic"><strong>10.</strong> Documenting</a> <br>
+      <a id="documenting-documentation-comments" class="sub-topic"><strong>10.1</strong> Documentation Comments</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>10.2</strong> Using Documenter</a> <br>
+    <a id="use-declarations" class="topic"><strong>11.</strong> Use Declarations</a> <br>
+    <a id="preprocessor" class="topic"><strong>12.</strong> Preprocessor</a> <br>
+      <a id="preprocessor-directives" class="sub-topic"><strong>12.1</strong> Directives</a> <br>
+    <a id="standard-library" class="topic"><strong>13.</strong> Standard Library</a> <br>
+      <a id="standard-library-builtin" class="sub-topic"><strong>13.1</strong> Built-In</a> <br>
+      <a id="standard-library-io" class="sub-topic"><strong>13.2</strong> io</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
