--- a/pages/docs.html
+++ b/pages/docs.html
@@ -28,9 +28,10 @@
     <a href="../index.html">
       <img
         class="navigation-logo"
-        src="https://raw.githubusercontent.com/the-xlang/resources/main/x.svg?sanitize=true">
+        src="https://raw.githubusercontent.com/the-xlang/resources/main/x.svg?sanitize=true"
+        style="margin-left: 5px; margin-right: 10px;">
     </a>
-    <div class="sub-title" style="color: rgb(200, 116, 221); margin-top: auto; margin-bottom: auto;">Documentations</div>
+    <div class="sub-title" style="color: rgb(200, 116, 221); font-family: 'OpenSans-Bold'; margin-top: auto; margin-bottom: auto;">DOCUMENTATIONS</div>
   </div>
   <div id="side-navigation" style="margin-top: 55px; height: calc(100% - 95px);">
     <a id="the-xlang" class="topic"><strong></strong> The X Programming Language</a> <br>
