--- a/pages/docs.html
+++ b/pages/docs.html
@@ -39,6 +39,7 @@
       <a id="common-concepts-maps" class="sub-topic"><strong>5.4.</strong> Maps</a> <br>
       <a id="common-concepts-control-flow" class="sub-topic"><strong>5.5.</strong> Control Flow</a> <br>
       <a id="common-concepts-enums" class="sub-topic"><strong>5.6.</strong> Enums</a> <br>
+      <a id="common-concepts-structures" class="sub-topic"><strong>5.7.</strong> Structures</a> <br>
     <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
       <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
       <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a> <br>
