--- a/pages/docs.html
+++ b/pages/docs.html
@@ -43,38 +43,42 @@
     <a id="memory" class="topic"><strong>6.</strong> Memory</a> <br>
       <a id="memory-pointers" class="sub-topic"><strong>6.1.</strong> Pointers</a> <br>
       <a id="memory-memory-management" class="sub-topic"><strong>6.2.</strong> Memory Management</a> <br>
-    <a id="types" class="topic"><strong>7.</strong> Types</a> <br>
-      <a id="types-aliasing" class="sub-topic"><strong>7.1.</strong> Aliasing</a> <br>
-      <a id="types-casting" class="sub-topic"><strong>7.2.</strong> Casting</a> <br>
-      <a id="types-str" class="sub-topic"><strong>7.3.</strong> str</a> <br>
-      <a id="types-arrays" class="sub-topic"><strong>7.4.</strong> Arrays</a> <br>
-      <a id="types-maps" class="sub-topic"><strong>7.5.</strong> Maps</a> <br>
-    <a id="type-statics" class="topic"><strong>8.</strong> Type Statics</a> <br>
-      <a id="type-statics-i8" class="sub-topic"><strong>8.1.</strong> i8</a> <br>
-      <a id="type-statics-i16" class="sub-topic"><strong>8.2.</strong> i16</a> <br>
-      <a id="type-statics-i32" class="sub-topic"><strong>8.3.</strong> i32</a> <br>
-      <a id="type-statics-i64" class="sub-topic"><strong>8.4.</strong> i64</a> <br>
-      <a id="type-statics-u8" class="sub-topic"><strong>8.5.</strong> u8</a> <br>
-      <a id="type-statics-u16" class="sub-topic"><strong>8.6.</strong> u16</a> <br>
-      <a id="type-statics-u32" class="sub-topic"><strong>8.7.</strong> u32</a> <br>
-      <a id="type-statics-u64" class="sub-topic"><strong>8.8.</strong> u64</a> <br>
-      <a id="type-statics-f32" class="sub-topic"><strong>8.9.</strong> f32</a> <br>
-      <a id="type-statics-f64" class="sub-topic"><strong>8.10.</strong> f64</a> <br>
-      <a id="type-statics-size" class="sub-topic"><strong>8.11.</strong> size</a> <br>
-      <a id="type-statics-str" class="sub-topic"><strong>8.12.</strong> str</a> <br>
-    <a id="namespaces" class="topic"><strong>9.</strong> Namespaces</a> <br>
-    <a id="cxx" class="topic"><strong>10.</strong> Cxx</a> <br>
-      <a id="cxx-cxx-embedding" class="sub-topic"><strong>10.1.</strong> Cxx Embedding</a> <br>
-      <a id="cxx-cxxapi" class="sub-topic"><strong>10.2.</strong> CxxAPI</a> <br>
-    <a id="documenting" class="topic"><strong>11.</strong> Documenting</a> <br>
-      <a id="documenting-documentation-comments" class="sub-topic"><strong>11.1</strong> Documentation Comments</a> <br>
-      <a id="documenting-using-documenter" class="sub-topic"><strong>11.2</strong> Using Documenter</a> <br>
-    <a id="use-declarations" class="topic"><strong>12.</strong> Use Declarations</a> <br>
-    <a id="preprocessor" class="topic"><strong>13.</strong> Preprocessor</a> <br>
-      <a id="preprocessor-directives" class="sub-topic"><strong>13.1</strong> Directives</a> <br>
-    <a id="standard-library" class="topic"><strong>14.</strong> Standard Library</a> <br>
-      <a id="standard-library-builtin" class="sub-topic"><strong>14.1</strong> Built-In</a> <br>
-      <a id="standard-library-io" class="sub-topic"><strong>14.2</strong> io</a> <br>
+    <a id="error-handling" class="topic"><strong>7.</strong> Error Handling</a> <br>
+      <a id="error-handling-error-structure" class="sub-topic"><strong>7.1.</strong> Error Structure</a> <br>
+      <a id="error-handling-panics" class="sub-topic"><strong>7.2.</strong> Panics</a> <br>
+      <a id="error-handling-handling-panics" class="sub-topic"><strong>7.3.</strong> Handling Panics</a> <br>
+    <a id="types" class="topic"><strong>8.</strong> Types</a> <br>
+      <a id="types-aliasing" class="sub-topic"><strong>8.1.</strong> Aliasing</a> <br>
+      <a id="types-casting" class="sub-topic"><strong>8.2.</strong> Casting</a> <br>
+      <a id="types-str" class="sub-topic"><strong>8.3.</strong> str</a> <br>
+      <a id="types-arrays" class="sub-topic"><strong>8.4.</strong> Arrays</a> <br>
+      <a id="types-maps" class="sub-topic"><strong>8.5.</strong> Maps</a> <br>
+    <a id="type-statics" class="topic"><strong>9.</strong> Type Statics</a> <br>
+      <a id="type-statics-i8" class="sub-topic"><strong>9.1.</strong> i8</a> <br>
+      <a id="type-statics-i16" class="sub-topic"><strong>9.2.</strong> i16</a> <br>
+      <a id="type-statics-i32" class="sub-topic"><strong>9.3.</strong> i32</a> <br>
+      <a id="type-statics-i64" class="sub-topic"><strong>9.4.</strong> i64</a> <br>
+      <a id="type-statics-u8" class="sub-topic"><strong>9.5.</strong> u8</a> <br>
+      <a id="type-statics-u16" class="sub-topic"><strong>9.6.</strong> u16</a> <br>
+      <a id="type-statics-u32" class="sub-topic"><strong>9.7.</strong> u32</a> <br>
+      <a id="type-statics-u64" class="sub-topic"><strong>9.8.</strong> u64</a> <br>
+      <a id="type-statics-f32" class="sub-topic"><strong>9.9.</strong> f32</a> <br>
+      <a id="type-statics-f64" class="sub-topic"><strong>9.10.</strong> f64</a> <br>
+      <a id="type-statics-size" class="sub-topic"><strong>9.11.</strong> size</a> <br>
+      <a id="type-statics-str" class="sub-topic"><strong>9.12.</strong> str</a> <br>
+    <a id="namespaces" class="topic"><strong>10.</strong> Namespaces</a> <br>
+    <a id="cxx" class="topic"><strong>11.</strong> Cxx</a> <br>
+      <a id="cxx-cxx-embedding" class="sub-topic"><strong>11.1.</strong> Cxx Embedding</a> <br>
+      <a id="cxx-cxxapi" class="sub-topic"><strong>11.2.</strong> CxxAPI</a> <br>
+    <a id="documenting" class="topic"><strong>12.</strong> Documenting</a> <br>
+      <a id="documenting-documentation-comments" class="sub-topic"><strong>12.1</strong> Documentation Comments</a> <br>
+      <a id="documenting-using-documenter" class="sub-topic"><strong>12.2</strong> Using Documenter</a> <br>
+    <a id="use-declarations" class="topic"><strong>13.</strong> Use Declarations</a> <br>
+    <a id="preprocessor" class="topic"><strong>14.</strong> Preprocessor</a> <br>
+      <a id="preprocessor-directives" class="sub-topic"><strong>14.1</strong> Directives</a> <br>
+    <a id="standard-library" class="topic"><strong>15.</strong> Standard Library</a> <br>
+      <a id="standard-library-builtin" class="sub-topic"><strong>15.1</strong> Built-In</a> <br>
+      <a id="standard-library-io" class="sub-topic"><strong>15.2</strong> io</a> <br>
     <a id="end" class="topic">End</a>
   </div>
   <div id="side-navigation-content">
